# messsge_service

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
sending_messages/: admin.py  apps.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
sending_messages/management/commands/: test_mailing.py
sending_messages/migrations/: 0001_initial.py  0002_alter_message_options_and_more.py  0002_initial.py
sending_messages/templates/sending_messages/: base.html  form_mailing.html  form_message.html  form_recipient.html  mailing_confirm_delete.html  mailing_detail.html  mailings_list.html  main_page.html  message_confirm_delete.html  message_detail.html  messages_list.html  recipient_confirm_delete.html  recipient_detail.html  recipients_detail.html  recipients_list.html
sending_messages/templates/sending_messages/includes/: inc_menu.html
templates/: base.html
templates/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: custom_createsuperuser.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  user_form.html
