[tool.poetry]
name = "messsge-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flake8 = "^7.3.0"
black = "^26.1.0"
mypy = "^1.19.1"
isort = "^7.0.0"
django = "^6.0.1"
psycopg2 = "^2.9.11"
dotenv = "^0.9.9"
ipython = "^9.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
